# j4rs-android-activity

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml
app/src/main/rust/: .gitignore  Cargo.toml
app/src/main/rust/src/: lib.rs
