[package]
name = "j4rs-android-activity"
version = "0.1.0"
edition = "2021"
description = "j4rs usage with android-support"
license = "Apache-2.0"
[dependencies]
android-activity = { version = "0.6", features = ["native-activity"] }
j4rs = {git = "https://github.com/astonbitecode/j4rs"}

[lib]
crate-type = ["cdylib"]
